# preference-based-social-welfare-optimization

./: .gitignore  README.md  app.py  environment.yml  pyproject.toml
.github/workflows/: testing.yml
configs/: default.yaml
configs/experiments/: experiment-1.yaml  experiment-2.yaml  test-functions.yaml
configs/reproducibility/: pbo.yaml  piers.yaml
configs/utilities_strategy/: allocation.yaml  dc.yaml
scripts/: README.md  dev.py  report.py  search.py  show.py
scripts/visualize/: base.py
src/pref/: __init__.py  main.py  utils.py
src/pref/games/: base.py
src/pref/learning/: __init__.py  base.py  no_regret.py  reward_types.py
src/pref/pbo/: README.md  base.py  confidence_sets.py
src/pref/utilities_strategy/: __init__.py  allocation.py  base.py  dc.py
tests/: __init__.py  test_basic.py
tests/utils/: dummy.py
