[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pref"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pref"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]